v2 with ordering system

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,1 @@
-.form-control:focus{box-shadow:0 0 0 1px rgba(13,110,253,0.25)}.form-control::placeholder{opacity:0.5}.lead{font-size:15px}
+.form-control:focus{box-shadow:0 0 0 1px rgba(13,110,253,.25)}.form-control::placeholder{opacity:.5}.lead{font-size:15px}
